--- a/styles.css
+++ b/styles.css
@@ -1678,11 +1678,12 @@ body.dark-mode .dark-mode-btn i.fa-sun {
 /* User Greeting Styles */
 .user-greeting {
     margin-left: auto;
-    padding: 0 20px;
     color: black;
-    font-size: 15px;
     display: flex;
     align-items: center;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 0 25px;
 }
 
 .user-greeting span {
