--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,8 @@ ul {
     align-items: center;
     padding: 20px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    font-family: poppins, sans-serif;
+    font-weight: 600;
     height: var(--top-nav-height);
 }
 
@@ -76,13 +78,14 @@ ul {
 }
 
 .logo-container img.logo {
-    width: 40px;
-    height: 40px;
+    width:80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
 }
 
 .logo-container h2 {
+    font-family: poppins, sans-serif;
     font-size: 18px;
     font-weight: 600;
     white-space: nowrap;
@@ -735,17 +738,17 @@ ul {
 .auth-header {
     text-align: center;
     padding: 30px;
-    background: linear-gradient(135deg, var(--primary), var(--secondary));
+    background: #36413e;
     color: var(--white);
 }
 
 .auth-header .auth-logo {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
-    border: 3px solid var(--white);
+    border: 3px solid #36413e;
 }
 
 .auth-header h2 {
